crates/oxc_css_parser/tests/error/at-rule/media/unmatched-braces.snap
---
source: crates/oxc_css_parser/tests/error.rs
---
error: expect token `}`, but found `<eof>`
  ┌─ unmatched-braces.css:5:1
  │
5 │ 
  │ ^


